--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
+    "recharts": "^2.10.4",
     "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
